testsuite/tests/rename/should_fail/T25991b2.hs
{-# LANGUAGE TypeFamilies, DataKinds #-}

module T25991b2 where

import T25991b_helper (C(type (#)))

f a b = a # b